# llm-study

./: .gitignore  LICENSE  Readme.md  chainlit.md  chat.py  env_template  l3-iterative-prompt-development.py  output.txt  pyproject.toml
chatbot/: agents.py  callbacks.py  config.py  downloader.py  embeddings.py  llm.py  logger.py  split.py  vectorstore.py
chatbot/prompts/: agent_prompts.py  py_tool_prompts.py  retriever_prompts.py  sys.py  twse_api_prompt.py  yfin_api_prompt.py
chatbot/retrievers/: selfquery.py
chatbot/tools/: __init__.py  finlab_tools.py  python_tools.py  twse_api_tools.py  utils.py  vectordb_retriever_tool.py  yfin_api_tools.py
chroma/: chroma.sqlite3
docs/chroma/227e4a66-1062-4d38-9fa8-0cdc0ee27452/: index_metadata.pickle
examples/: play_with_gpt.py  test-openai.py
learning/: Readme.md  Survey_vector.py  TreatPDF&Vectorsstores.py  TreatPDF.py  Try&Error.ipynb  Vectorstores.py  hello-llm.py  l3-iterative-prompt-development.py  play_with_gpt.py  預安裝.ipynb
