[tool.poetry]
name = "llm-study"
version = "0.1.0"
description = ""
authors = ["ding <email81227@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pendulum = "^3.0.0"
langchain = "^0.0.350"
langfuse = "^2.0.1"
langchain-google-genai = "^0.0.4"
autogen = "^1.0.16"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
