[tool.poetry]
name = "llm-study"
version = "0.1.0"
description = ""
authors = ["ding <email81227@gmail.com>"]
readme = "README.md"
packages = [{include = "llm_study"}]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
urllib3 = "1.26.15"

[tool.poetry.group.dev.dependencies]
openai = "0.28"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
